# string-utils

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
include/wniemiec/util/cpp/: StringUtils.hpp
src/wniemiec/util/cpp/: StringUtils.cpp
test/: CMakeLists.txt
test/wniemiec/util/cpp/: StringUtilsTest.cpp  StringUtilsTest.hpp
